trying to fix navbar bug, fixed horizontal overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,11 @@
   --transition-speed: 600ms;
 }
 
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
