--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -1,12 +1,19 @@
-.card {
-    margin-top: 5rem;
+.section_1 {
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.content {
     display: flex;
     flex-direction: column;
+    margin: 15rem;
 }
 
 .intro {
     width: 100%;
-    font-size: 32px;
+    font-size: 48px;
     display: block;
 }
 
