--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -37,7 +37,7 @@
     color: var(--text-primary);
 }
 
-.text {
+.linkText {
     display: none;
     margin-left: 1rem;
 }
@@ -47,17 +47,22 @@
     margin: 0 1.5rem;
 }
 
-.faprimary {
+.icon {
     color: var(--text-secondary);
     transition: var(--transition-speed);
 }
 
+.short {
+    display: inline;
+}
+
 .navbar:hover .short {
-    display: none
+    display: none;
 }
 
 .logo {
     user-select: none;
+    letter-spacing: 0.2ch;
 }
 
 .long {
@@ -66,7 +71,6 @@
 
 .navbar:hover .long {
     display: inline;
-    transition: 200ms ease;
 }
 
 @media only screen and (max-width: 600px) {
@@ -100,8 +104,7 @@
         width: 16rem;
     }
 
-    .navbar:hover .text {
-        display: inline;
-        transition: opacity var(--transition-speed);
+    .navbar:hover .linkText {
+        display: block;
     }
 }
